--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,62 @@
-body,
-footer {
-  font-family: "Archivo", sans-serif;
-  margin: 0px;
-}
-
-header {
-  padding: 25px;
-  display: flex;
-  justify-content: space-between;
-  font-size: large;
-}
-
-nav {
-  display: flex;
-}
-
-nav > ul {
-  display: flex;
-  justify-content: center;
-}
-
 ul {
   list-style-type: none;
   padding: 0px;
 }
 
-nav > ul > a {
-  margin: 0px 15px;
-  color: black;
-  text-decoration-color: transparent;
-  text-decoration: none;
+nav > ul {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
-nav > ul > a:hover,
-.active {
-  text-decoration: underline;
-  text-decoration-thickness: 3px;
+nav > ul > li {
+  margin: 0px 15px;
+  text-align: center;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .main {
   background-color: #fff39d;
   padding: 30px;
+}
 
-  height: 600px;
-  padding: 0px;
-}
 p {
-  font-family: "EB Garamond", serif;
-  font-size: 22px;
-  line-height: 1.3;
+  font-family: "EB Garamond";
+  font-size: 25px;
 }
+
 h1 {
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 0.5em;
 }
 
-.centered {
-  display: flex;
-  align-items: left;
-  justify-content: center;
-  flex-direction: column;
+body,
+footer {
+  font-family: "Archivo";
 }
 
 article {
   padding: 20px 50px;
 }
 
-.left {
-  width: 60%;
-}
-
 .right {
-  display: flex;
-  width: 40%;
-  position: relative;
+  display: none;
 }
 
-.right > img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-height: 100%;
+.fa-heart {
+  font-size: 36px;
 }
-
-/* skills */
 
 .hard-skill-item {
   display: flex;
@@ -95,11 +66,32 @@ article {
 
 .hard-skill-item > span {
   font-size: 22px;
-  min-width: 200px;
+  min-width: 180px;
+  display: flex;
+  align-items: center;
 }
 
-.skill-empty {
-  color: #9a9a9a;
+.quote {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 30px;
+}
+
+.quote-text {
+  font-family: "Comfortaa";
+  font-size: 24px;
+}
+
+.quote-name {
+  font-family: "Comfortaa", light;
+  font-size: 18px;
+}
+
+.centered {
+  flex-direction: row;
 }
 
 .hard-skill-item:hover > div > i {
@@ -108,6 +100,30 @@ article {
 
 .hard-skill-item:hover > div > i.skill-empty {
   display: none;
+}
+
+.active {
+  border-color: black;
+}
+
+nav > ul > li {
+  text-transform: uppercase;
+  border-bottom: 3px solid transparent;
+}
+
+nav > ul > li:hover {
+  border-color: #171236;
+  transition: border-color 0.7s linear;
+}
+
+a {
+  border: none;
+  text-decoration: none;
+  color: black;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 @keyframes pulse {
@@ -119,36 +135,17 @@ article {
   }
 }
 
-/* quote */
-
-section {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
+.skill-empty {
+  color: #9a9a9a;
 }
 
-.quote {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-}
-
-.quote-text {
-  font-family: "Comfortaa", regular;
-  font-size: 24px;
-}
-
-.quote-name {
-  font-family: "Comfortaa", light;
-  font-size: 18px;
-}
-
-/* quote */
 footer {
   color: white;
   background: #171236;
+}
+
+footer > section > article > div > ul > li > a:link {
+  color: white;
 }
 
 .connect-icons {
@@ -157,50 +154,42 @@ footer {
   margin-right: 20px;
 }
 
-.contact-section > article > div > ul > li > a:link {
-  color: white;
+@media only screen and (min-width: 1000px) {
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .fa-heart {
+  font-size: 54px;
 }
 
-@media only screen and (max-width: 1000px) {
-  header {
-    display: flex;
-    flex-direction: column;
-  }
-
-  header > div {
-    display: flex;
-    justify-content: center;
-  }
-
-  nav {
-    justify-content: center;
-  }
-
   .right {
-    display: none;
-  }
-  .main{
-    height: 100%;
-    padding: 30px;
+    display: flex;
+    width: 40%;
+    justify-content: end;
   }
 
-  .left{
-    width: 100%;
+  article {
+    padding: 30px 100px 30px 150px;
   }
 
   section {
-    justify-content: center;
+    display: flex;
+    padding: 30px;
   }
 
-  .hard-skill-item {
-    flex-direction: column;
+  .main > article {
+    display: flex;
+    justify-content: space-between;
+  }
+  .left {
+    width: 60%;
   }
 
-  p{
-    font-size: 35px;
-  }
-
-  .centered{
-    flex-direction: row;
+  .quote-parent {
+    display: flex;
+    width: 40%;
+    justify-content: end;
   }
 }
